--- a/examples/blue-green/kustomization.yaml
+++ b/examples/blue-green/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
 - bluegreen-service.yaml
 - bluegreen-ingress.yaml
 - bluegreen-preview-service.yaml
-- bluegreen-preview-ingress.yaml
+#- bluegreen-preview-ingress.yaml
