--- a/examples/blue-green/kustomization.yaml
+++ b/examples/blue-green/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
 - bluegreen-rollout.yaml
 - bluegreen-service.yaml
-- bluegreen-ingress.yaml
+#- bluegreen-ingress.yaml
 - bluegreen-preview-service.yaml
 #- bluegreen-preview-ingress.yaml
